tests/rosetta/transpiler/Java/align-columns.error
compile: exit status 1
/tmp/TestJavaTranspiler_Rosetta_Goldenalign-columns2822880247/001/Main.java:56: error: cannot find symbol
        string[][] fmtLines = new String[][]{};
        ^
  symbol:   class string
  location: class Main
/tmp/TestJavaTranspiler_Rosetta_Goldenalign-columns2822880247/001/Main.java:82: error: cannot find symbol
        String[][] lines = (String[][])((string[][])(f.get("text")));
                                         ^
  symbol:   class string
  location: class Main
2 errors
